--- a/base_kanban_stage/views/base_kanban_abstract.xml
+++ b/base_kanban_stage/views/base_kanban_abstract.xml
@@ -24,7 +24,8 @@
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.kanban_color.raw_value)} o_kanban_record oe_kanban_global_click">
                             <div class="o_dropdown_kanban dropdown" name="card_dropdown_menu">
-                                <a class="dropdown-toggle btn" data-toggle="dropdown" href="#">
+                                <a role="button" class="dropdown-toggle o-no-caret btn" data-toggle="dropdown"
+                                   href="#" aria-label="Dropdown menu" title="Dropdown menu">
                                     <span class="fa fa-bars fa-lg"/>
                                 </a>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -50,10 +51,11 @@
                                 <div class="oe_kanban_bottom_left">
                                     <field name="kanban_priority" widget="priority"/>
                                 </div>
-                                <div class="oe_kanban_bottom_right" t-if="record.user_id">
-                                    <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)"
-                                        class="oe_kanban_avatar_smallbox pull-right"/>
-                                </div>
+                                <div class="oe_kanban_bottom_right">
+                                <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)"
+                                     t-att-title="record.user_id.value" t-att-alt="record.user_id.value"
+                                     width="24" height="24" class="oe_kanban_avatar float-right"/>
+                            </div>
                             </div>
                         </div>           
                     </t>
