--- a/base_remote/views/res_remote_views.xml
+++ b/base_remote/views/res_remote_views.xml
@@ -7,15 +7,17 @@
             <form string="Remote">
                 <sheet>
                     <div class="oe_title">
-                        <h1><field name="name"/></h1>
+                        <h1>
+                            <field name="name" />
+                        </h1>
                     </div>
                     <group name="technical">
                         <group name="network">
-                            <field name="ip"/>
-                            <field name="in_network"/>
+                            <field name="ip" />
+                            <field name="in_network" />
                         </group>
                     </group>
-                    <notebook/>
+                    <notebook />
                 </sheet>
             </form>
         </field>
@@ -25,8 +27,8 @@
         <field name="model">res.remote</field>
         <field name="arch" type="xml">
             <tree string="Remotes">
-                <field name="name"/>
-                <field name="ip"/>
+                <field name="name" />
+                <field name="ip" />
             </tree>
         </field>
     </record>
@@ -37,10 +39,11 @@
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
     </record>
-
-    <menuitem id="res_remote_menu"
-              name="Remotes"
-              sequence="10"
-              parent="base.menu_administration"
-              action="res_remote_action"/>
+    <menuitem
+        id="res_remote_menu"
+        name="Remotes"
+        sequence="10"
+        parent="base.menu_administration"
+        action="res_remote_action"
+    />
 </odoo>
