--- a/letsencrypt/views/res_config_settings.xml
+++ b/letsencrypt/views/res_config_settings.xml
@@ -20,7 +20,7 @@
                             <div class="col-xs-12 col-md-12 o_setting_box">
                                 <div class="o_setting_right_pane">
                                     <label for="letsencrypt_altnames"/>
-                                    <div class="text-muted">List additional domains for the certificate</div>
+                                    <div class="text-muted">List the domains for the certificate</div>
                                     <field name="letsencrypt_altnames" />
                                 </div>
                                 <div class="o_setting_right_pane">
