--- a/upgrade_analysis/wizards/view_upgrade_generate_record_wizard.xml
+++ b/upgrade_analysis/wizards/view_upgrade_generate_record_wizard.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    <record id="view_openupgrade_generate_records_wizard_form" model="ir.ui.view">
-        <field name="name">view.openupgrade.generate_records_wizard.form</field>
-        <field name="model">openupgrade.generate.records.wizard</field>
+    <record id="view_upgrade_generate_record_wizard_form" model="ir.ui.view">
+        <field name="model">upgrade.generate.record.wizard</field>
         <field name="arch" type="xml">
-            <form string="OpenUpgrade Generate Records Wizard">
+            <form string="upgrade Generate Record Wizard">
                 <field name="state" invisible="1" />
                 <group states="init" colspan="4">
                     <p
                     >This will reinitialize all the modules installed on this database. Do not continue if you use this database in production.</p>
                 </group>
                 <group states="ready" colspan="4">
-                    <p>Modules initialized and records created</p>
+                    <p>Modules initialized and record created</p>
                 </group>
                 <footer>
                     <button
@@ -28,19 +27,19 @@
         </field>
     </record>
 
-    <record id="action_generate_records" model="ir.actions.act_window">
+    <record id="action_upgrade_generate_record_wizard" model="ir.actions.act_window">
         <field name="name">Generate Records</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">openupgrade.generate.records.wizard</field>
+        <field name="res_model">upgrade.generate.record.wizard</field>
         <field name="view_mode">form,tree</field>
         <field name="target">new</field>
     </record>
 
     <menuitem
         name="Generate Records"
-        id="menu_openupgrade_generate_records"
-        parent="menu_openupgrade"
-        action="action_generate_records"
+        id="menu_upgrade_generate_record"
+        parent="menu_upgrade"
+        action="action_upgrade_generate_record_wizard"
         sequence="15"
     />
 
