[IMP] upgrade_analysis: improve install wizard to have the possibility to select some modules, and improve filters, regarding test module with startswith and endswith pattern

--- a/upgrade_analysis/views/menu.xml
+++ b/upgrade_analysis/views/menu.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    <!-- Top level menu under 'Database structure' -->
     <menuitem
         id="menu_upgrade"
-        name="upgrade Development"
+        name="Upgrade Analysis"
         parent="base.menu_administration"
         sequence="99"
     />
