[MIG] base_custom_info: Migration to 13.0 - added #1844 improvements from v12

--- a/base_custom_info/views/custom_info_property_view.xml
+++ b/base_custom_info/views/custom_info_property_view.xml
@@ -35,6 +35,7 @@
                 <sheet>
                     <group>
                         <field name="name" />
+                        <field name="widget" />
                         <field name="field_type" />
                         <field name="category_id" />
                         <field name="required" />
@@ -83,6 +84,7 @@
             <search>
                 <field name="name" />
                 <field name="template_id" />
+                <field name="widget" />
                 <field name="field_type" />
                 <field name="category_id" />
                 <field name="required" />
