--- a/base_custom_info/views/custom_info_value_view.xml
+++ b/base_custom_info/views/custom_info_value_view.xml
@@ -25,6 +25,27 @@
             </tree>
         </field>
     </record>
+    <record id="custom_info_value_editable" model="ir.ui.view">
+        <field name="model">custom.info.value</field>
+        <field name="arch" type="xml">
+            <custom_info string="Custom Property Values">
+                <field name="name" />
+                <field name="owner_id" />
+                <field name="property_id" force_save="1" readonly="0" />
+                <field name="category_id" />
+                <field name="required" />
+                <field name="widget" />
+                <field name="field_type" />
+                <field name="value_str" />
+                <field name="value_bool" />
+                <field name="value_int" />
+                <field name="value_float" />
+                <field name="value_date" />
+                <field name="value" />
+                <field name="value_id" />
+            </custom_info>
+        </field>
+    </record>
     <record id="custom_info_value_tree_editable" model="ir.ui.view">
         <field name="model">custom.info.value</field>
         <field name="priority" eval="999" />
@@ -65,6 +86,10 @@
                         <field
                             name="value_bool"
                             attrs="{'invisible': [('field_type', '!=', 'bool')], 'required': [('required', '=', True), ('field_type', '=', 'bool')]}"
+                        />
+                        <field
+                            name="value_date"
+                            attrs="{'invisible': [('field_type', '!=', 'date')], 'required': [('required', '=', True), ('field_type', '=', 'date')]}"
                         />
                         <field
                             name="value_id"
