--- a/base_custom_info/views/res_partner_view.xml
+++ b/base_custom_info/views/res_partner_view.xml
@@ -24,7 +24,7 @@
                             name="custom_info_ids"
                             colspan="4"
                             nolabel="1"
-                            context="{'embed': True, 'tree_view_ref': 'base_custom_info.custom_info_value_tree_editable'}"
+                            mode="custom_info"
                         />
                     </group>
                 </page>
