[MIG] Migrate module base_changeset to v14.

--- a/base_changeset/views/record_changeset_change_views.xml
+++ b/base_changeset/views/record_changeset_change_views.xml
@@ -84,6 +84,7 @@
         <field name="model">record.changeset.change</field>
         <field name="arch" type="xml">
             <search>
+                <field name="field_name" />
                 <filter
                     string="Pending"
                     name="pending"
