[MIG] profiler: Migration to 12.0

--- a/profiler/views/profiler_profile_view.xml
+++ b/profiler/views/profiler_profile_view.xml
@@ -93,6 +93,7 @@
                         </button>
 
                         <button name="action_view_attachment"
+                            string="View attachment"
                             type="object"
                             class="oe_stat_button"
                             icon="fa-pencil-square-o"
