--- a/cron_inactivity_period/views/ir_cron.xml
+++ b/cron_inactivity_period/views/ir_cron.xml
@@ -4,15 +4,13 @@ Copyright (C) 2018 - Today: GRAP (http://www.grap.coop)
 @author: Sylvain LE GAL (https://twitter.com/legalsylvain)
 License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 -->
-<openerp><data>
-
+<odoo>
     <record id="view_ir_cron_form" model="ir.ui.view">
         <field name="model">ir.cron</field>
-        <field name="inherit_id" ref="base.ir_cron_view" />
+        <field name="inherit_id" ref="base.ir_cron_view_form" />
         <field name="arch" type="xml">
-            <field name="doall" position="after">
-                <newline />
-                <group string="Inactivity Periods" colspan="4">
+            <xpath expr="//notebook" position="inside">
+                <page string="Inactivity Periods">
                     <field name="inactivity_period_ids" nolabel="1">
                         <tree editable="bottom">
                             <field name="type"/>
@@ -20,9 +18,8 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                             <field name="inactivity_hour_end" attrs="{'invisible': [('type', '!=', 'hour')]}" widget="float_time"/>
                         </tree>
                     </field>
-                </group>
-            </field>
+                </page>
+            </xpath>
         </field>
     </record>
-
-</data></openerp>
+</odoo>
