--- a/base_import_odoo/views/import_odoo_database_field.xml
+++ b/base_import_odoo/views/import_odoo_database_field.xml
@@ -56,7 +56,7 @@
                     <field
                         name="id_field_id"
                         attrs="{'invisible': [('mapping_type', '!=', 'by_reference')], 'required': [('mapping_type', '=', 'by_reference')]}"
-                        domain="[('ttype', '=', 'integer'), ('model_id.model', '=', model)]"
+                        domain="[('ttype', 'in', ('integer', 'many2one_reference')), ('model_id.model', '=', model)]"
                     />
                 </group>
             </form>
